--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "vue": "^2.2.6"
   },
   "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-vue": "^8.6.0",
     "sass": "^1.50.0",
     "vite": "^2.8.0",
     "vite-plugin-vue2": "^1.9.3",
     "vite-plugin-windicss": "^1.8.4",
+    "vue-eslint-parser": "^8.3.0",
     "vue-template-compiler": "^2.6.14",
     "windicss": "^3.5.1"
   }
